add more 2 routing update global.ARRAY_SYMBOLS & global.OBJECT_SYMBOLS
- clean code, rename and standardize routing
